[workspace]
resolver = "2"
members = [
    "crates/ce-core",
    "crates/ce-shell",
    "crates/checkr",
    "crates/chip",
    "crates/chip-cli",
    "crates/driver",
    "crates/envs/*",
    "crates/gcl",
    "crates/gitty",
    "crates/inspectify",
    "crates/mcltl-rs",
    "crates/stdx",
    "crates/xtask",
]

[workspace.package]
version = "0.2.0"
repository = "https://github.com/team-checkr/checkr/"
authors = [
    "Oliver Bøving <oliver@bvng.dk>",
    "Camilla Færch <camilla_faerch@hotmail.com>",
]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
axum = { version = "0.7.3", features = ["macros", "ws"] }
axum-macros = "0.4.1"
bitflags = "2.4.0"
camino = "1.1.6"
ce-calculator = { path = "./crates/envs/ce-calculator" }
ce-compiler = { path = "./crates/envs/ce-compiler" }
ce-core = { path = "./crates/ce-core" }
ce-interpreter = { path = "./crates/envs/ce-interpreter" }
ce-parser = { path = "./crates/envs/ce-parser" }
ce-security = { path = "./crates/envs/ce-security" }
ce-shell = { path = "./crates/ce-shell" }
ce-sign = { path = "./crates/envs/ce-sign" }
checkr = { path = "./crates/checkr" }
chip = { path = "./crates/chip" }
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.4", features = ["derive"] }
color-eyre = "0.6.2"
dashmap = "5.5.3"
driver = { path = "./crates/driver" }
dunce = "1.0.4"
futures-util = "0.3.28"
gcl = { path = "./crates/gcl" }
gitty = { path = "./crates/gitty" }
indexmap = { version = "2.0.0", features = ["serde"] }
itertools = "0.12.1"
lalrpop = "0.20.2"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
lz4_flex = "0.11.2"
md5 = "0.7.0"
miette = { version = "7.2.0", features = ["fancy-no-syscall"] }
mcltl = { path = "./crates/mcltl-rs" }
once_cell = "1.19.0"
petgraph = { version = "0.6.3" }
rand = { version = "0.8.5", features = ["small_rng"] }
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
smtlib = { version = "0.2.0", features = ["tokio"] }
stdx = { path = "./crates/stdx" }
# tapi = { path = "../tapi/crates/tapi", features = ["chrono", "toml"] }
tapi = { git = "https://github.com/oeb25/tapi.git", features = [
    "chrono",
    "endpoints",
    "smol_str",
    "toml",
] }
thiserror = "1.0.38"
tokio = { version = "1.37.0", features = ["full"] }
toml = { version = "0.8.0", features = ["indexmap"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[profile.test]
opt-level = 1

[workspace.metadata.release]
publish = false
tag-name = "v{{version}}"
shared-version = true
pre-release-hook = ["just", "release-hook"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

[workspace.metadata.dist.dependencies.homebrew]
just = "*"

[workspace.metadata.dist.dependencies.apt]
just = "*"

[workspace.metadata.dist.dependencies.chocolatey]
just = "*"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
