[workspace]
resolver = "2"
members = [
    "crates/ce-core",
    "crates/ce-shell",
    "crates/checkr",
    "crates/chip-cli",
    "crates/chip-wasm",
    "crates/chip",
    "crates/driver",
    "crates/envs/*",
    "crates/gcl",
    "crates/gitty",
    "crates/inspectify",
    "crates/mcltl-rs",
    "crates/stdx",
    "crates/xtask",
]

[workspace.package]
version = "0.2.8"
edition = "2024"
repository = "https://github.com/team-checkr/checkr/"
authors = [
    "Oliver Bøving <oliver@bvng.dk>",
    "Camilla Færch <camilla_faerch@hotmail.com>",
]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
axum = { version = "0.8.1", features = ["macros", "ws"] }
axum-macros = "0.5.0"
bitflags = "2.8.0"
camino = "1.1.6"
ce-calculator = { path = "./crates/envs/ce-calculator" }
ce-compiler = { path = "./crates/envs/ce-compiler" }
ce-core = { path = "./crates/ce-core" }
ce-interpreter = { path = "./crates/envs/ce-interpreter" }
ce-parser = { path = "./crates/envs/ce-parser" }
ce-security = { path = "./crates/envs/ce-security" }
ce-shell = { path = "./crates/ce-shell" }
ce-sign = { path = "./crates/envs/ce-sign" }
checkr = { path = "./crates/checkr" }
chip = { path = "./crates/chip" }
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.4", features = ["derive"] }
color-eyre = "0.6.2"
dashmap = "6.1.0"
driver = { path = "./crates/driver" }
dunce = "1.0.4"
futures-util = "0.3.28"
gcl = { path = "./crates/gcl" }
gitty = { path = "./crates/gitty" }
indexmap = { version = "2.0.0", features = ["serde"] }
itertools = "0.14.0"
lalrpop = "0.22.1"
lalrpop-util = { version = "0.22.1", features = ["lexer"] }
lz4_flex = "0.11.2"
md5 = "0.7.0"
miette = { version = "7.5.0", features = ["fancy-no-syscall"] }
mcltl = { path = "./crates/mcltl-rs" }
once_cell = "1.19.0"
petgraph = { version = "0.7.1" }
rand = { version = "0.9.0", features = ["small_rng"] }
rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
smol_str = { version = "0.3.2", features = ["serde"] }
smtlib = { version = "0.3.0" }
stdx = { path = "./crates/stdx" }
# tapi = { path = "../tapi/crates/tapi", features = [
#     "chrono",
#     "endpoints",
#     "smol_str",
#     "toml",
# ] }
tapi = { git = "https://github.com/oeb25/tapi.git", features = [
    "chrono",
    "endpoints",
    "smol_str",
    "toml",
] }
thiserror = "2.0.11"
tokio = { version = "1.37.0", features = ["full"] }
toml = { version = "0.8.0", features = ["indexmap"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[profile.test]
opt-level = 1

[workspace.metadata.release]
publish = false
tag-name = "v{{version}}"
shared-version = true
pre-release-hook = ["just", "release-hook"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
