[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = { version = "0.7.3" }
axum = { version = "0.6.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
verification-lawyer = { path = "../" }
tower-http = { version = "0.3.4", features = ["cors", "fs"] }
mime_guess = "2.0.4"
mime = "0.3.16"
axum-macros = "0.3.1"
itertools = "0.10.5"
clap = { version = "4.1.1", features = ["derive"] }
anyhow = "1.0.68"
open = "3.2.0"
infra = { version = "0.1.0", path = "../infra" }
rand = { version = "0.8.5", features = ["small_rng"] }
