[package]
name = "ce-core"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util.workspace = true
gcl.workspace = true
itertools.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tapi.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
