[package]
name = "ce-shell"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ce-core.workspace = true
ce-graph.workspace = true
ce-parse.workspace = true
ce-sign.workspace = true
futures-util = "0.3.28"
itertools.workspace = true
md5 = "0.7.0"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tapi.workspace = true
thiserror.workspace = true
tracing.workspace = true
