[package]
name = "checko"
edition = "2021"
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-macros = { workspace = true }
checkr = { workspace = true }
chrono = "0.4.24"
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = { workspace = true }
comfy-table = { workspace = true }
dioxus = "0.3.2"
dioxus-liveview = { version = "0.3.0", features = ["axum"] }
indexmap = { version = "1.9.2", features = ["serde"] }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.3.1"
xshell = "0.2.3"
