[package]
name = "checkr"
edition = "2021"
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = { workspace = true }
comfy-table = { workspace = true }
egg = "0.9.3"
graphviz-rust = "0.6.1"
indexmap = { version = "1.9.2", features = ["serde"] }
itertools = { workspace = true }
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
miette = { version = "5.5.0", features = ["fancy"] }
once_cell = "1.17.0"
petgraph = { version = "0.6.3" }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { workspace = true }
serde_json = { workspace = true }
smtlib-lowlevel = { version = "0.1.5", features = ["z3-static"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typeshare = { workspace = true }

[build-dependencies]
lalrpop = { version = "0.19.8", features = ["lexer"] }
