[package]
name = "checkr"
edition = "2021"
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = { workspace = true }
comfy-table = { workspace = true }
egg = "0.9.3"
graphviz-rust = "0.6.1"
indexmap = { version = "1.9.2", features = ["serde"] }
itertools = { workspace = true }
lalrpop-util = { version = "0.19.9", features = ["lexer"] }
miette = { version = "5.5.0", features = ["fancy"] }
once_cell = "1.17.0"
petgraph = { version = "0.6.3" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typeshare = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.3.0"

[build-dependencies]
lalrpop = { version = "0.19.9", features = ["lexer"] }
