[package]
name = "checkr"
edition = "2021"
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ce-shell.workspace = true
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
