[package]
name = "driver"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ce-core.workspace = true
ce-shell.workspace = true
color-eyre.workspace = true
futures-util.workspace = true
glob = "0.3.1"
itertools.workspace = true
notify = "6.1.1"
notify-debouncer-mini = { version = "0.4.1", default-features = false }
serde.workspace = true
tapi.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
