[package]
name = "inspectify-api"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
ce-core.workspace = true
ce-shell.workspace = true
futures-util = "0.3.30"
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tapi = { version = "0.1.21", path = "../tapi" }
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
