[package]
name = "inspectify-api"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
ce-core.workspace = true
ce-graph.workspace = true
ce-shell.workspace = true
clap.workspace = true
color-eyre = "0.6.2"
driver.workspace = true
futures-util = "0.3.30"
gcl.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tapi = { version = "0.1.21", path = "../tapi" }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.5.0", features = ["cors"] }
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
