[package]
name = "inspectify"
edition = "2021"
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-macros = { workspace = true }
binswap-github = "0.1.6"
checkr = { workspace = true }
rand = { workspace = true }
clap = { version = "4.1.1", features = ["derive"] }
color-eyre = { workspace = true }
crossterm = "0.26.0"
futures = "0.3.27"
glob = "0.3.1"
include_dir = { version = "0.7.3" }
indicatif = "0.17.3"
itertools = { workspace = true }
mime = "0.3.16"
mime_guess = "2.0.4"
notify = "5.0.0"
notify-debouncer-mini = { version = "0.2.1", default-features = false }
open = "4.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.3.4", features = ["cors", "fs"] }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
typeshare = { workspace = true }
