[package]
name = "tapi-macro"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.4"
heck = "0.4.1"
prettyplease = "0.2.16"
proc-macro2 = "1.0.75"
quote = "1.0.35"
serde_derive_internals = "0.29.0"
syn = { version = "2.0.48", features = ["full"] }
