[package]
name = "tapi"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
dyn-clone = "1.0.16"
futures-util = "0.3.30"
heck = "0.4.1"
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tapi-macro = { path = "../tapi-macro" }
tsify = { version = "0.4.5", default-features = false, features = ["json"] }
