[package]
name = "ui"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
backtrace-on-stack-overflow = "0.3.0"
ce-core.workspace = true
ce-shell.workspace = true
color-eyre.workspace = true
dioxus.workspace = true
dioxus-liveview.workspace = true
driver.workspace = true
glob = "0.3.1"
itertools.workspace = true
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
tokio.workspace = true
tracing.workspace = true
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
