[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.83"
verification-lawyer = { path = "../" }
itertools = "0.10.5"
once_cell = "1.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "1.1.0"
miette = { version = "5.3.0", features = ["fancy"] }
getrandom = { version = "0.2.8", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
