[package]
name = "xtask"
edition = "2021"
version = { workspace = true }
repository = { workspace = true }

# NOTE: This has issues with cargo-dist: https://github.com/axodotdev/cargo-dist/issues/79
# [package.metadata.release]
# release = false

[dependencies]
binswap-github = "0.1.1"
clap = { version = "4.1.4", features = ["derive"] }
color-eyre = "0.6.2"
tokio = { version = "1.25.0", features = ["full"] }
toml_edit = "0.19.3"
xshell = "0.2.3"
