[package]
name = "ce-shell"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ce-calculator.workspace = true
ce-compiler.workspace = true
ce-core.workspace = true
ce-interpreter.workspace = true
ce-parser.workspace = true
ce-security.workspace = true
ce-sign.workspace = true
dashmap.workspace = true
futures-util.workspace = true
hex = "0.4.3"
itertools.workspace = true
md5.workspace = true
once_cell.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tapi.workspace = true
thiserror.workspace = true
tracing.workspace = true
