[package]
name = "chip-cli"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
camino.workspace = true
chip.workspace = true
clap.workspace = true
color-eyre.workspace = true
gitty.workspace = true
itertools.workspace = true
serde.workspace = true
smtlib = { workspace = true, features = ["tokio"] }
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
