[package]
name = "chip-cli"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "chip"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[dependencies]
camino.workspace = true
chip.workspace = true
clap.workspace = true
color-eyre.workspace = true
gitty.workspace = true
itertools.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
smtlib = { workspace = true, features = ["tokio"] }
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
