[package]
name = "chip-wasm"
edition = "2021"
version = "0.1.0"
repository = "https://github.com/team-checkr/checkr/"
authors = ["Oliver Bøving <oliver@bvng.dk>"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
indexmap = "2.2.5"
itertools = "0.12.1"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
mcltl = { path = "../mcltl-rs" }
miette = { version = "7.2.0", features = ["fancy-no-syscall"] }
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
smtlib = "0.1.8"
smtlib-lowlevel = "0.1.8"
thiserror = "1.0.57"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
tsify = { version = "0.4.5", default-features = false, features = ["js"] }
wasm-bindgen = "0.2.87"

[workspace]

[build-dependencies]
lalrpop = "0.20.2"
