[package]
name = "chip-wasm"
edition = "2021"
version = "0.1.0"
repository = "https://github.com/team-checkr/checkr/"
authors = ["Oliver Bøving <oliver@bvng.dk>"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chip = { path = "../chip" }
chrono = "0.4.38"
comfy-table = { version = "7.1.1", default-features = false }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.14", features = ["js"] }
indexmap = "2.2.5"
itertools = "0.12.1"
mcltl = { path = "../mcltl-rs" }
miette = { version = "7.2.0", features = ["fancy-no-syscall"] }
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
smol_str = "0.2.1"
thiserror = "1.0.57"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
tsify = { version = "0.4.5", default-features = false, features = ["js"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.69", features = ["console"] }

[workspace]
